# C_programming_K26

./: .gitmodules  CMakeLists.txt  README.md  main.c
Week_1/: Week1_T1.c  Week1_T1.h  Week1_T2.c  Week1_T2.h  Week1_T3.c  Week1_T3.h
Week_2/: Week2_T4.c  Week2_T4.h  Week2_T5.c  Week2_T5.h  Week2_T6.c  Week2_T6.h
Week_3/: Week3_T7.c  Week3_T7.h  Week3_T8.c  Week3_T8.h  Week3_T9.c  Week3_T9.h
Week_4/: Week4_T10.c  Week4_T10.h  Week4_T11.c  Week4_T11.h  Week4_T12.c  Week4_T12.h
